[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/button_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 3 )

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
options_scene = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -158.0
margin_right = 158.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 316.0
margin_bottom = 600.0
color = Color( 0.180392, 0.180392, 0.180392, 0.811765 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 316.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 55.0
margin_top = 200.0
margin_right = 260.0
margin_bottom = 400.0

[node name="Start" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 205.0
margin_bottom = 64.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 205.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 205.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="Gametitel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -817, -129 )
custom_fonts/font = SubResource( 2 )
text = "Gametitel"
align = 1

[connection signal="focus_entered" from="MarginContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_focus_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Start" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="MarginContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_focus_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Options" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_QuitButton_pressed"]
